fix: slick-carousel flickering

--- a/src/components/WhoGets/style.scss
+++ b/src/components/WhoGets/style.scss
@@ -57,7 +57,7 @@
 
 @media only screen and (max-width: 600px) {
     .WhoGets-Component {
-        height: 120vw;
+        height: 130vw;
         justify-content: start;
         padding: 10vw 0;
         
